LanguageTool Change Log

3.0 (release planned for 2015-06-29)

-...


2.9 (2015-03-30)

-Catalan:
    -updated POS tag dictionary
    -added new rules
    -fixed false alarms

-English:
    -Added a few rules and fixed a few false alarms
    -Added many new style rules contributed by Heikki Lehvaslaiho. As these
     may cause false alarms, they are not activated by default. You can
     activate them by turning on all rules in the new 'Plain English' category.

-Esperanto:
    -added a few new rules

-French
    -updated POS tag dictionary and Hunspell dictionary to Dicollecte-5.3

-German:
    -added a few new rules and fixed false alarms
    -Added a new rule that checks for subject verb agreement. For now, only cases
     with 'ist', 'sind', 'war', and 'waren' are supported. Example for errors that
     are detected: 'Der Hund sind schön.', 'Die Autos ist schnell.'
     To make this rule work, phrases are now unified in disambiguation.xml: for
     example, 'Mann' in the phrase 'ein Mann' will only retain its nominative
     reading (SUB:NOM:SIN:MAS), whereas it used to have also accusative and
     dative readings (SUB:AKK:SIN:MAS, SUB:DAT:SIN:MAS).
     (https://github.com/languagetool-org/languagetool/issues/233)

-Italian:
    -improved a few rules

-Polish:
    -added several new rules

-Portuguese:
    -added/improved several rules
    -3695 compound words (pre-reform) - the largest free database

-Russian:
    -added and improved rules
    
-Ukrainian:
    -big dictionary update
    -new grammar rules
    -new simple replace rule for soft suggestions
    -disambiguator improvements
    -compound tagging and spelling improvements
    -initials tagging improvements
    -sentence and word tokenizing improvements
    -improved handling of stres symbol and soft hyphen

-Bitext rules:
    -added a simple rule for checking whether translations end with the same punctuation
     mark as the original (this includes only .?! characters).