@@ -2,7 +2,8 @@ LanguageTool Change Log
 
 3.0 (release planned for 2015-06-29)
 
--...
+-API:
+    -several deprecated methods and classes have been removed
 
 
 2.9 (2015-03-30)
